--- a/app/src/main/res/layout/activity_table_list.xml
+++ b/app/src/main/res/layout/activity_table_list.xml
@@ -17,10 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
-
+        android:layout_height="match_parent"/>
 </RelativeLayout>
