--- a/app/src/main/res/layout/item_table_list.xml
+++ b/app/src/main/res/layout/item_table_list.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/padding_normal"
-    android:background="@color/cardview_dark_background"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_normal">
 
-    <!--<android.support.v7.widget.CardView-->
-        <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-        <!--android:id="@+id/card_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--card_view:cardElevation="4dp"-->
-        <!--card_view:cardCornerRadius="4dp">-->
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:layout_gravity="center"
+    android:layout_marginTop="@dimen/padding_normal"
+    android:layout_marginBottom="4dp"
+    android:layout_marginRight="@dimen/padding_normal"
+    card_view:cardCornerRadius="4dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/item"
+            android:layout_margin="@dimen/padding_normal"
+            android:adjustViewBounds="true"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/grid_size" />
 
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@color/white" />
-    <!--</android.support.v7.widget.CardView>-->
-</LinearLayout>
+            android:gravity="center_horizontal"
+            android:text="Book"
+            android:visibility="visible" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
