--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="padding_normal">8dp</dimen>
+    <dimen name="text_size_l">16sp</dimen>
+    <dimen name="text_size_xl">20dp</dimen>
+    <dimen name="profile_size">48dp</dimen>
+    <dimen name="padding_small">4dp</dimen>
+    <dimen name="grid_size">64dp</dimen>
 </resources>
