--- a/app/src/main/res/layout/activity_table_list.xml
+++ b/app/src/main/res/layout/activity_table_list.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/padding_normal"
     tools:context="com.restaurant.partnerapp.tables.ui.TableListActivity">
 
     <ProgressBar
